Sun Oct 02 22:25:54 GMT 2011  Olly Betts <olly@survex.com>

	* queryparser/lemon.c,queryparser/queryparser.lt: Merge
	  http://www.sqlite.org/src/info/27d8e684db: Enhancements to lemon to
	  generate more compact action tables and to avoid making array bounds
	  tests that can never fail on action table calculations.  This
	  reduces the size of QueryParser's tables a little.

Sun Oct 02 21:47:36 GMT 2011  Olly Betts <olly@survex.com>

	* queryparser/lemon.c: Merge http://www.sqlite.org/src/info/d66a0f31eb:
	  Adjust the lemon implementation so that it always computes the same
	  PDA regardless of qsort() implementation on the host platform. In
	  other words, make all sorts in lemon stable.

Thu Sep 29 12:11:28 GMT 2011  Olly Betts <olly@survex.com>

	* tests/queryparsertest.cc: Add cases to ensure a quoted boolean
	  prefix accepts an empty value or a single space.

Wed Sep 14 04:48:57 GMT 2011  Olly Betts <olly@survex.com>

	* docs/quickstart.rst: Correct link which was to
	  quickstartsearch.cc.html but should be to quickstartindex.cc.html.

Tue Sep 13 08:51:34 GMT 2011  Olly Betts <olly@survex.com>

	* backends/flint_lock.cc: Fix comment typo.

Thu Sep 01 12:50:43 GMT 2011  Olly Betts <olly@survex.com>

	* include/xapian/enquire.h: Clarify "sort by date" with BoolWeight
	  example.

Tue Aug 30 13:51:48 GMT 2011  Olly Betts <olly@survex.com>

	* docs/index.rst: Add link to apidoc.pdf.

Wed Aug 24 14:12:05 GMT 2011  Olly Betts <olly@survex.com>

	* queryparser/queryparser.lemony: Fix memory leak (caught by existing
	  testcase queryparser1 when run under valgrind).

Wed Aug 24 12:47:49 GMT 2011  Olly Betts <olly@survex.com>

	* queryparser/,tests/queryparsertest.cc,tests/termgentest.cc: Add
	  support for indexing and searching CJK text using n-grams.  Currently
	  this is only enabled if environmental variable XAPIAN_CJK_NGRAM is
	  set to a non-empty value.

Tue Aug 23 03:49:27 GMT 2011  Olly Betts <olly@survex.com>
